--- a/index.html
+++ b/index.html
@@ -2,46 +2,46 @@
 <html>
   <head>
     <meta charset="utf-8">
-    <title>Facts Accordian</title>
+    <title>Questionaire Accordian</title>
     <link rel="stylesheet" href="styles.css">
   </head>
   <body>
     <div id="container">
-      <h1> FAQ SLIDER</h1>
-      <div class="title"><h3>FUN RANDOM FACTS</h3></div>
+      <h1>QUESTION SLIDER</h1>
+      <div class="title"><h3>FUN TRICK QUESTIONS</h3></div>
       <ul class="factsList">
-        <li class="question"><img src="img/arrow.png" alt="arrow">&nbsp;What item of clothing was named after its Scottish inventor?</li>
-        <li class="answer">A Mackintosh</li>
+        <li class="question"><img src="img/arrow.png" alt="arrow">&nbsp;Imagine you are in a sinking row boat surrounded by sharks. How would you survive?</li>
+        <li class="answer">Stop Imagining!</li>
 
-        <li class="question"><img src="img/arrow.png" alt="arrow">&nbsp;What is another word for lexicon?</li>
-        <li class="answer">Dictionary</li>
+        <li class="question"><img src="img/arrow.png" alt="arrow">&nbsp;An electric train is moving north at 100mph and a wind is blowing to the west at 10mph. Which way does the smoke blow? </li>
+        <li class="answer">There is no smoke with an electric train.</li>
 
-        <li class="question"><img src="img/arrow.png" alt="arrow">&nbsp;Which is the only American state to begin with the letter 'p'? </li>
-        <li class="answer">Pennsylvania</li>
+        <li class="question"><img src="img/arrow.png" alt="arrow">&nbsp;How can you drop a raw egg onto a concrete floor without cracking it?</li>
+        <li class="answer">The egg won't crack the concrete floor.</li>
 
-        <li class="question"><img src="img/arrow.png" alt="arrow">&nbsp;What is the diameter of Earth?</li>
-        <li class="answer">8,000 miles</li>
+        <li class="question"><img src="img/arrow.png" alt="arrow">&nbsp;How can you lift an elephant with one hand?</li>
+        <li class="answer">It's not a problem, since you will never find an elephant with one hand.</li>
 
-        <li class="question"><img src="img/arrow.png" alt="arrow">&nbsp;Which actress has won the most Oscars?</li>
-        <li class="answer">Katharine Hepburn, with 4 Oscars and 12 nominations.</li>
+        <li class="question"><img src="img/arrow.png" alt="arrow">&nbsp;How much dirt is there in a hole 3 feet deep, 6 ft long and 4 ft wide?</li>
+        <li class="answer">None, or else it wouldn't be a hole.</li>
 
-        <li class="question"><img src="img/arrow.png" alt="arrow">&nbsp;What colour is a Himalayan poppy? </li>
-        <li class="answer">Blue</li>
+        <li class="question"><img src="img/arrow.png" alt="arrow">&nbsp;If there are 6 apples and you take away 4, how many do you have?</li>
+        <li class="answer">The 4 you took.</li>
 
-        <li class="question"><img src="img/arrow.png" alt="arrow">&nbsp;What colour jersey is worn by the winners of each stage of the Tour De France?</li>
-        <li class="answer">Yellow</li>
+        <li class="question"><img src="img/arrow.png" alt="arrow">&nbsp;Some months have 31 days, others have 30 days. How many have 28 days?</li>
+        <li class="answer">All months have 28 days.</li>
 
-        <li class="question"><img src="img/arrow.png" alt="arrow">&nbsp;Name the Spanish artist, sculptor and draughtsman famous for co-founding the Cubist movement.</li>
-        <li class="answer">Pablo Picasso</li>
+        <li class="question"><img src="img/arrow.png" alt="arrow">&nbsp;Larry’s father has five sons named Ten, Twenty, Thirty, Forty…Guess what would be the name of the fifth? </li>
+        <li class="answer">Larry. He would be the fifth son.</li>
 
-        <li class="question"><img src="img/arrow.png" alt="arrow">&nbsp;What is the painting 'La Gioconda' more usually known as?</li>
-        <li class="answer">The Mona Lisa</li>
+        <li class="question"><img src="img/arrow.png" alt="arrow">&nbsp;If you throw a red stone into the blue sea what it will become?</li>
+        <li class="answer">It would become wet.</li>
 
-        <li class="question"><img src="img/arrow.png" alt="arrow">&nbsp;Name the author of On Her Majesty's Secret Service, Dr No and Thunderball, among others.</li>
-        <li class="answer">Ian Fleming</li>
+        <li class="question"><img src="img/arrow.png" alt="arrow">&nbsp;Which is heavier, 100 pounds of rocks or 100 pounds of feathers? </li>
+        <li class="answer">They both are 100 pounds.</li>
 
-        <li class="question"><img src="img/arrow.png" alt="arrow">&nbsp;Which popular BBC series about old collectables began in 1979, presented by Bruce Parker and Arthur Negus, and is still running to this day?</li>
-        <li class="answer">Antiques Roadshow</li>
+        <li class="question"><img src="img/arrow.png" alt="arrow">&nbsp;How many times can you subtract 10 from 100?</li>
+        <li class="answer">Once. The next time you would be subtracting 10 from 90.</li>
       </ul>
       <footer>
         <p>Copyright &copy; 2017, All rights reserved by AP.</p>
