--- a/index.html
+++ b/index.html
@@ -2,12 +2,12 @@
 <html>
   <head>
     <meta charset="utf-8">
-    <title>Questionaire Accordian</title>
+    <title>BRAIN TEASER</title>
     <link rel="stylesheet" href="styles.css">
   </head>
   <body>
     <div id="container">
-      <h1>QUESTION SLIDER</h1>
+      <h1>BRAIN TEASER</h1>
       <div class="title"><h3>FUN TRICK QUESTIONS</h3></div>
       <ul class="factsList">
         <li class="question"><img src="img/arrow.png" alt="arrow">&nbsp;Imagine you are in a sinking row boat surrounded by sharks. How would you survive?</li>
